--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Add Google Fonts here-->
-
-    <!--Link your stylesheet here-->
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <img
+            src="images/logo.png"
+            alt="watering can"
+            width="150"
+            height="150"
+          />
+        </div>
+        <div class="list">
+          <ul class="links">
+            <li class="link">Home</li>
+            <li class="link">About</li>
+            <li class="link">Plants</li>
+            <li class="link">Contact</li>
+          </ul>
+        </div>
+      </nav>
+      <div>
+        <h1>The Watering Can</h1>
+        <button class="large">Shop Our Indoor Plant Sale!</button>
+      </div>
+    </header>
+  </body>
 </html>
