working header with flexbox

--- a/index.html
+++ b/index.html
@@ -13,29 +13,33 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="logo">
-          <img
-            src="images/logo.png"
-            alt="watering can"
-            width="150"
-            height="150"
-          />
+    <div class="body-div">
+      <header>
+        <nav>
+          <div class="logo">
+            <img
+              src="images/logo.png"
+              alt="watering can"
+              width="150"
+              height="150"
+            />
+          </div>
+          <div class="list">
+            <ul class="links">
+              <li class="link">Home</li>
+              <li class="link">About</li>
+              <li class="link">Plants</li>
+              <li class="link">Contact</li>
+            </ul>
+          </div>
+        </nav>
+        <div class="CTA-main">
+          <h1>The Watering Can</h1>
+          <button class="button button-large">
+            Shop Our Indoor Plant Sale!
+          </button>
         </div>
-        <div class="list">
-          <ul class="links">
-            <li class="link">Home</li>
-            <li class="link">About</li>
-            <li class="link">Plants</li>
-            <li class="link">Contact</li>
-          </ul>
-        </div>
-      </nav>
-      <div>
-        <h1>The Watering Can</h1>
-        <button class="large">Shop Our Indoor Plant Sale!</button>
-      </div>
-    </header>
+      </header>
+    </div>
   </body>
 </html>
